syntax = "proto3";

package erda.dop.devworkflow;

import "common/openapi.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/erda-project/erda-proto-go/dop/devWorkflow/pb";

service DevWorkflowService {
    option(erda.common.openapi_service) = {
        service: "dop",
        auth: {
            check_login: true,
            check_token: true,
        }
    };
    rpc CreateDevWorkflow(CreateDevWorkflowRequest)
            returns (CreateDevWorkflowResponse) {
    }
    rpc DeleteDevWorkflow(DeleteDevWorkflowRequest)
            returns (DeleteDevWorkflowResponse) {
    }
    rpc UpdateDevWorkflow(UpdateDevWorkflowRequest)
            returns (UpdateDevWorkflowResponse) {
        option(google.api.http) = {
            put: "/api/devWorkflow/{ID}",
        };
        option(erda.common.openapi) = {
            path: "/api/devWorkflow/{ID}",
        };
    }
    rpc GetDevWorkflowsByProjectID(GetDevWorkflowRequest)
            returns (GetDevWorkflowResponse) {
        option(google.api.http) = {
            get: "/api/devWorkflow/actions/get-by-projectID",
        };
        option(erda.common.openapi) = {
            path: "/api/devWorkflow/actions/get-by-projectID",
        };
    }
}

message CreateDevWorkflowRequest {
    uint64 projectID = 1;
    string userID = 2;
}

message CreateDevWorkflowResponse {
    DevWorkflow data = 1;
}

message DeleteDevWorkflowRequest {
    uint64 projectID = 1;
    string userID = 2;
}

message DeleteDevWorkflowResponse {

}

message UpdateDevWorkflowRequest {
    string ID = 1 [json_name = "id"];
    string workFlows = 2 ;
}

message UpdateDevWorkflowResponse {
    DevWorkflow data = 1;
}

message GetDevWorkflowRequest {
    uint64 projectID = 1;
}

message GetDevWorkflowResponse {
    DevWorkflow data = 1;
}

message DevWorkflow {
    string ID = 1 [json_name = "id"];
    string workFlows = 2 ;
    uint64 orgID = 3;
    string orgName = 4;
    uint64 projectID = 5;
    string projectName = 6;
    google.protobuf.Timestamp timeCreated = 7;
    google.protobuf.Timestamp timeUpdated = 8;
    string creator = 9;
    string updater = 10;
}

